<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Atlantic\nRBCA</string>
    <string name="disclaimer">The author of this application is in no way affiliated with Atlantic PIRI. The RBCA Tier I RBSLs have been used in this application without express permission from Atlantic PIRI. The information presented by this application is not guaranteed to be accurate and should be used at your own risk. </string>
    <string name="menu_settings">Settings</string>
    <string name="compare_gw">Compare Groundwater</string>
    <string name="compare_soil">Compare Soil</string>
    <string name="get_guidelines">Get Guidelines</string>

    <color name="lt_gray">#E0E0E0</color>
    <color name="lter_gray">#F0F0F0</color>

    <string name="title_activity_compare">Compare to Guidelines</string>
    <string name="title_activity_get_guidelines">Get Guidelines</string>
    
    <string name="media_prompt">Select media:</string>
    <string name="receptor_prompt">Receptor type:</string>
    <string name="gw_use_prompt">Groundwater use:</string>
    <string name="soil_type_prompt">Soil type:</string>
    
    <string-array name="media_choices">
        <item>Soil</item>
        <item>Groundwater</item>
    </string-array>
    
    <string-array name="receptor_choices">
        <item>Commercial</item>
        <item>Residential</item>
        <item>Industrial</item>
        <item>Agricultural</item>
    </string-array>
    
    <string-array name="gw_use_choices">
        <item>Potable</item>
        <item>Non-Potable</item>
    </string-array>
    
    <string-array name="soil_type_choices">
        <item>Coarse-grained</item>
        <item>Fine-grained</item>
    </string-array>
    
    <string-array name="resemblance_choices">
        <item>Gasoline</item>
        <item>Fuel Oil</item>
        <item>Lube Oil</item>
    </string-array>
    
    
    <string name="show_guidelines">Get Guidelines!</string>
    <string name="compare">Compare!</string>
    <string name="rbsls_instruct">Select guidelines for comparison:</string>
    

</resources>