<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" 
    android:fillViewport="true" >
	
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="20dip" >
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/media_prompt" />   
	    <Spinner
		    android:id="@+id/media"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		/>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/receptor_prompt" />   
	    <Spinner
		    android:id="@+id/receptor"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		/>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/gw_use_prompt" />   
	    <Spinner
		    android:id="@+id/gw_use"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		/>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/soil_type_prompt" />   
	    <Spinner
		    android:id="@+id/soil_type"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		/>
	    
	    <Button
		    android:id="@+id/show_guidelines"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		 	android:layout_gravity="center_horizontal"
		    android:text="@string/show_guidelines" 
		    android:background="@android:drawable/btn_default"
		    android:layout_marginTop="10dip" />
	
	</LinearLayout>
</ScrollView>