<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dip"
    tools:context=".MainActivity">
    
        
	<ImageView
	    android:src="@drawable/logo"
	    android:layout_width="wrap_content"
	    android:layout_height="0dip"
	    android:layout_weight="1"
	    android:layout_gravity="center_horizontal"
	    android:contentDescription="ARBCA Logo"
	/>
	    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
	    android:layout_weight="2"
        android:orientation="vertical">
        
	    <Button
	        android:id="@+id/get_guidelines_act"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	    	android:layout_gravity="center_horizontal"
	        android:text="@string/get_guidelines" 
	        android:background="@android:drawable/btn_default" />
	
	    <Button
	        android:id="@+id/compare_gw_act"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	    	android:layout_gravity="center_horizontal"
	        android:text="@string/compare_gw" 
	        android:background="@android:drawable/btn_default" />
	    
	    <Button
	        android:id="@+id/compare_soil_act"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	    	android:layout_gravity="center_horizontal"
	        android:text="@string/compare_soil" 
	        android:background="@android:drawable/btn_default" />
	    
	    <TextView
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	    	android:layout_gravity="center_horizontal"
	    	android:gravity="center"
	        android:text="@string/disclaimer"
	        android:paddingTop="20dip" />
    
    </LinearLayout>

</LinearLayout>