<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" 
    android:fillViewport="true" >
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingRight="20dip"
	    android:paddingLeft="20dip"
	    android:paddingTop="10dip"
	    android:paddingBottom="10dip" >
	    
	    <LinearLayout
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:background="@color/lt_gray"
    		android:padding="10dip"
    		android:orientation="vertical" >
    		
	        <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/lter_gray"
		        android:padding="5dip"
		        android:text="@string/rbsls_instruct"
		        android:layout_marginBottom="10dip" /> 
	    
		     <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/receptor_prompt" />   
		    <Spinner
			    android:id="@+id/receptor"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			/>
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/gw_use_prompt" />   
		    <Spinner
			    android:id="@+id/gw_use"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			/>
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/soil_type_prompt" />   
		    <Spinner
			    android:id="@+id/soil_type"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			/>
	    
	    </LinearLayout>
	    
	    <LinearLayout
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:background="@color/lt_gray"
    		android:padding="10dip"
    		android:orientation="vertical"
    		android:layout_marginTop="10dip" >
	    
		    <TextView
		        android:id="@+id/conc_instruct"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background="@color/lter_gray"
		        android:padding="5dip" /> 
		    
		    <TableLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" >
		        
		        <TableRow 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" >
		            
		            <TextView 
		            	android:layout_width="0dip"
		            	android:layout_height="wrap_content"
		            	android:layout_weight="1"
		            	android:textStyle="bold"
		            	android:text="Benzene: "
		            />
		            
		            <EditText 
		                android:id="@+id/b_conc"
		            	android:layout_width="0dip"
		            	android:layout_height="wrap_content"
		            	android:layout_weight="1"
		            	android:inputType="numberDecimal"
		            />
		            
		         </TableRow>
		            
		         <TableRow 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" >
		            
		            <TextView 
		            	android:layout_width="0dip"
		            	android:layout_height="wrap_content"
		            	android:layout_weight="1"
		            	android:textStyle="bold"
		            	android:text="Toluene: "
		            />
		            
		            <EditText
		                android:id="@+id/t_conc"
		            	android:layout_width="0dip"
		            	android:layout_height="wrap_content"
		            	android:layout_weight="1"
		            	android:inputType="numberDecimal"
		            />
		        </TableRow>
		            
		        <TableRow 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" >
		            
		            <TextView 
		            	android:layout_width="0dip"
		            	android:layout_height="wrap_content"
		            	android:layout_weight="1"
		            	android:textStyle="bold"
		            	android:text="Ethyl Benzene: "
		            />
		            
		            <EditText 
		                android:id="@+id/e_conc"
		            	android:layout_width="0dip"
		            	android:layout_height="wrap_content"
		            	android:layout_weight="1"
		            	android:inputType="numberDecimal"
		            />
		        </TableRow>
		            
		        <TableRow 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" >
		            
		            <TextView 
		            	android:layout_width="0dip"
		            	android:layout_height="wrap_content"
		            	android:layout_weight="1"
		            	android:textStyle="bold"
		            	android:text="Xylenes: "
		            />
		            
		            <EditText 
		                android:id="@+id/x_conc"
		            	android:layout_width="0dip"
		            	android:layout_height="wrap_content"
		            	android:layout_weight="1"
		            	android:inputType="numberDecimal"
		            />
		        </TableRow>
		                   
		        <TableRow 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" >
		            
		            <TextView 
		            	android:layout_width="0dip"
		            	android:layout_height="wrap_content"
		            	android:layout_weight="1"
		            	android:textStyle="bold"
		            	android:text="Modified TPH: "
		            />
		            
		            <EditText 
		                android:id="@+id/tph_conc"
		            	android:layout_width="0dip"
		            	android:layout_height="wrap_content"
		            	android:layout_weight="1"
		            	android:inputType="numberDecimal"
		            />
		            
		        </TableRow>
		        
		        <TableRow 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" >
		            
		            <TextView 
		            	android:layout_width="0dip"
		            	android:layout_height="wrap_content"
		            	android:layout_weight="1"
		            	android:textStyle="bold"
		            	android:text="Resemblance: "
		            />
		                        
		            <Spinner
			    		android:id="@+id/resemblance"
			    		android:layout_width="match_parent"
			    		android:layout_height="wrap_content"
					/>
		            
		        </TableRow>
		        
		    </TableLayout>
	    
	    </LinearLayout>
	        
	    <Button
		    android:id="@+id/compare_gw"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		 	android:layout_gravity="center_horizontal"
		    android:text="@string/compare" 
		    android:background="@android:drawable/btn_default"
		    android:layout_marginTop="10dip" />
	
	</LinearLayout>
	
</ScrollView>